# openai-langchain-deepagent

./: .env.example  .gitignore  CLAUDE.md  README.md  claude.md  docker-compose.yml  pyproject.toml
examples/: basic_agent.py  conversation_with_memory.py  debug_phoenix_attributes.py  phoenix_message_troubleshooting.py  phoenix_session_id_guide.md  session_with_phoenix_tracing.py  single_merchant_session_demo.py  todo_middleware_demo.py
src/openai_langchain_deepagent/: __init__.py  agent.py  instrumentation.py  main.py  session_inspector.py  session_manager.py  session_utils.py  state.py
tests/: __init__.py  test_agent.py  test_checkpointing.py  test_main.py  test_session_memory.py
